<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:text="@string/status_share"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/UsernameHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:textSize="20sp"
        android:text="@string/username_head" />

    <EditText
        android:id="@+id/UsernameReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:autofillHints="" />
    <TextView
        android:id="@+id/PasswordHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:textSize="20sp"
        android:text="@string/password_head" />

    <EditText
        android:id="@+id/PasswordReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/Register"
        android:onClick="onRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/register" />

    <Button
        android:id="@+id/GoBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320sp"
        android:onClick="onBackClick"
        android:text="@string/go_back" />


</LinearLayout>